--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    Hello!
+    Hello! How are you?
   <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
-  <script src="./client.js"></script>    
+  <script src="./client.js"></script>
 
   </head>
   <body>
