--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,86 @@
+<!-- This is a static file -->
+<!-- served from your routes in server.js -->
+
+<!-- You might want to try something fancier: -->
+<!-- html/nunjucks docs: http://mozilla.github.io/nunjucks/ -->
+<!-- jade: http://jade-lang.com/ -->
+<!-- haml: http://haml.info/tutorial.html -->
+<!-- hbs(handlebars): http://handlebarsjs.com/expressions.html -->
+
+<!-- <!DOCTYPE html> -->
 <html>
   <head>
-    <!--Hello! How are you?-->
-    
-  <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
-  <script src="./client.js"></script>
+    <title>Blue 6 Sense</title>
+    <meta name="description" content="A cool thing made with Gomix">
+    <link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-calable=0"/>
+
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="authorize-div" style="display: none">
-      <span>Authorize access to Gmail API</span>
-      <!--Button for the user to click to initiate auth sequence -->
-      <button id="authorize-button" onclick="handleAuthClick(event)">
-        Authorize
-      </button>
-    </div>
-    <pre id="output"></pre>
-  </body>
+    <header>
+      <h1>
+        Blue 6 Sense
+      </h1>
+    </header>
 
+    <table>
+      <tbody>
+        <tr>
+          <td id="1">
+            
+          </td>
+          <td id="2">
+            
+          </td>
+          <td id="3">
+            
+          </td>
+        </tr>
+        <tr>
+          <td id="4">
+            
+          </td>
+          <td id="5">
+            
+          </td>
+          <td id="6">
+            
+          </td>
+        </tr>
+        <tr>
+          <td id="7">
+            
+          </td>
+          <td id="8">
+            
+          </td>
+          <td id="9">
+            
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+    <br><Br>
+    <form>
+      <input type="text" id="myWords">
+    </form>
+    
+    <form>
+      <!-- <button id="left"><<</button> --><!-- <button id="right">>></button>   -->
+    </form>
+    <br>
+    <button id="startButton">Start</button>
+    
+    
+    <!-- Your web-app is https, so your scripts need to be too -->
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"
+            integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+            crossorigin="anonymous"></script>
+    <script src="./client.js"></script>
+
+  </body>
 </html>
