--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    Hello!
+    Hello! how are you???
   <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   <script src="./client.js"></script>    
 
